--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "support/sink"]
 	path = support/sink
 	url = git@github.com:ded/sink-test.git
+[submodule "support/smoosh"]
+	path = support/smoosh
+	url = git://github.com/fat/smoosh.git
