more functionality like add(el, 'keydown keyup click', handler) and passing extra args to events like add(el, 'click', handler, foo, bar, baz) anddddd... less lines :P

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "support/smoosh"]
 	path = support/smoosh
 	url = git://github.com/fat/smoosh.git
+[submodule "support/syn"]
+	path = support/syn
+	url = https://github.com/jupiterjs/syn.git
