--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "https://github.com/fat/bean.git"
   },
+  "keywords": ["ender", "events", "event"],
   "main": "./bean.js",
   "ender": "./src/ender.js"
 }
