added benchmarks.html to test changes
Added nwevents as a submodule as a reference, along with jQuery
for benchmarking (even though they are not directly comparable
to Bean).
Added fixes for noConflict() to bean.js so we can compare it
as original to src/bean.js as the new code.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "support/qwery"]
 	path = support/qwery
 	url = git@github.com:ded/qwery.git
+[submodule "support/nwevents"]
+	path = support/nwevents
+	url = https://github.com/dperini/nwevents.git
