--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   , "devDependencies": {
         "buster": "~0.6.2"
       , "smoosh": "~0.3.x"
+      , "qwery": "~3.3.11"
     }
   , "ender": "./src/ender.js"
 }
