--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
     "name": "bean"
-  , "description": "an events api for javascript"
-  , "version": "1.0.0a1"
+  , "description": "A small, fast, framework-agnostic event manager"
+  , "version": "1.0.0"
   , "homepage": "https://github.com/fat/bean"
   , "authors": [
         "Jacob Thornton <@fat>"
-      , "Dustin Diaz <@ded>"
       , "Rod Vagg <@rvagg>"
+      , "Dustin Diaz <@ded>"
     ]
   , "repository": {
         "type": "git"
       , "url": "https://github.com/fat/bean.git"
     }
-  , "keywords": [ "ender", "events", "event" ]
+  , "keywords": [ "ender", "events", "event", "dom" ]
   , "main": "./bean.js"
   , "devDependencies": {
         "buster": "~0.6.2"
-      , "smoosh": "~0.3.x"
+      , "smoosh": "~0.3.2"
       , "qwery": "~3.3.11"
     }
   , "ender": "./src/ender.js"
