--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "bean",
   "description": "A small, fast, framework-agnostic event manager",
   "version": "1.0.14",
-  "homepage": "https://github.com/fat/bean",
+  "homepage": "https://github.com/brandon/bean",
   "authors": [
-    "Jacob Thornton <@fat>",
+    "Jacob Thornton <@brandon>",
     "Rod Vagg <@rvagg>",
     "Dustin Diaz <@ded>"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/fat/bean.git"
+    "url": "https://github.com/brandon/bean.git"
   },
   "keywords": [
     "ender",
